--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -81,9 +81,16 @@
         </activity>
 
         <provider
-            android:authorities="com.example.android.sunshine.app"
             android:name=".data.WeatherProvider"
+            android:authorities="com.example.android.sunshine.app"
+            android:enabled="true"
+            android:exported="true"
             />
     </application>
 
+    <permission 
+        android:name="com.example.android.sunshine.app.LICENSE_TO_KILL"
+        android:protectionLevel="dangerous"
+        android:label="License to Kill">
+     </permission>
 </manifest>
